samples/_failures_safe/1761469296_afa7ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5389d68e.c: In function ‘main’:
./samples/SAFE/__tmp_5389d68e.c:148: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_5389d68e.c:147:9: error: expected declaration or statement at end of input
  147 |         if
      |         ^~
./samples/SAFE/__tmp_5389d68e.c:147:9: error: expected declaration or statement at end of input
